--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -28,7 +28,7 @@ countdownYear = "2022"
 disableCountdown = false
 enable = true
 subtitle = "Meanwhile, Did you know that you can send us Crypto directly to this website? Send us your cypto today to: uber.day"
-title = "😎😎😎😎😎😎😎😎😎😎😎😎😎😎Uber Cool Days Are Coming Soon!"
+title = "😎😎😎😎😎😎😎😎😎😎😎😎😎😎😎 Uber Cool Days Are Coming Soon!"
 [params.navigation]
 about = "About"
 contact = "Contact"
